Fix visible delay

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
 }
 
 .card:nth-child(1).visible {
-    transition: all 1.0s ease-in .3s;
+    transition: all 1.0s ease-in 1.0s;
 }
 
 .card:nth-child(1).hidden {
@@ -74,7 +74,7 @@ body{
 }
 
 .card:nth-child(2).visible {
-    transition: all 1.0s ease-in .2s;
+    transition: all 1.0s ease-in .9s;
 }
 
 .card:nth-child(2).hidden {
@@ -97,7 +97,7 @@ body{
 }
 
 .card:nth-child(3).visible {
-    transition: all 1.0s ease-in .1s;
+    transition: all 1.0s ease-in .8s;
 }
 
 .card:nth-child(3).hidden {
@@ -119,7 +119,7 @@ body{
 }
 
 .card:nth-child(4).visible {
-    transition: all 1.0s ease-in 0s;
+    transition: all 1.0s ease-in .7s;
 }
 
 .card:nth-child(4).hidden {
